fixed choice descr adaptive

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -215,7 +215,9 @@
         &_item_subtitle
             font-size: 15px
     .choice
-        max-height: 200px
+        min-height: 100px
+        &_descr
+          margin: 45px 0 5px 0 
     .footer
         &_wrapper > div
             width: 106%
